--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -14,10 +14,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
-
     <link rel="stylesheet" href="style.css" />
     <title>Weather Dashboard</title>
   </head>
+
   <body>
     <nav class="navbar">
       <span class="navbar-brand mb-0 h1 w-100 text-center"
@@ -71,6 +71,11 @@
                   <p id="wind-speed"></p>
                 </div>
               </div>
+              <div class="row">
+                <div class="col-12 d-flex">
+                  <p id="UV-index"></p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="row">
@@ -99,6 +104,7 @@
       </div>
     </div>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
